<resources>
    <string name="app_name">appProject</string>
    <string name="log_det">BIEVENIDO A NUESTRO PORTAL DE VIDEOJUEGOS</string>
    <string name="log_dete">BIEVENIDO A NUESTRO PORTAL DE INSCRIPCIÓN</string>
    } <string name="log_detel">BIEVENIDO A NUESTRO PORTAL DE REGISTRO</string>
    <string name="log_name">GAME-ARENA</string>
    <string name="label_login_usu">Ingresar usario</string>
    <string name="label_regis_jugador">Ingresar nombre</string>
    <string name="label_regis_juego">Ingresar nombre del juego</string>
    <string name="label_regis_plataforma">Ingresar plataforma</string>
    <string name="label_regis_desarrollador">Ingresa el desarrollador</string>
    <string name="label_regis_categoria">Ingresa la categoria</string>

    <string name="label_regis_ape">Ingresar apellido</string>
    <string name="label_regis_edad">Ingresar edad</string>
    <string name="label_regis_nacio">Ingresar nacionalidad</string>
    <string name="label_login_cla">Ingresar contraseña</string>
    <string name="label_reg_usu">Ingresar nuevo usario</string>
    <string name="label_reg_cla">Ingresar contraseña</string>
    <string name="label_reg_cla2">Repetir contraseña</string>
    <string name="label_reg_email">Ingresar correo</string>
    <string name="label_reg">¿Eres un nuevo usuario?</string>
    <string name="label_card1">Inscripción a torneo</string>
    <string name="label_cardJugador">Registrar nuevo jugador</string>
    <string name="label_cardJuego">Registrar nuevo juego</string>
    <string name="label_card2">Nuevo torneo</string>
    <string name="label_card3">Torneos Disponibles</string>
    <string name="label_card4">Mis Torneos</string>

    <string name="label_card01">Usuarios</string>
    <string name="label_cardUsu">Lista de Usuarios</string>
    <string name="label_card02">Last</string>
    <string name="label_card5">Ingrese Nombre</string>
    <string name="label_card6">Ingrese Fecha Inicio</string>
    <string name="label_card7">Ingrese Fecha de Fin</string>
    <string name="label_card8">Ingrese la Categoria</string>
    <string name="label_card9">Ingrese el Torneo</string>
    <string name="label_card10">Ingrese el Jugador</string>
    <string name="label_card11">Ingrese el Juego</string>
    <string name="label_card12">Ingrese el Estado</string>

    <string name="facebook_app_id">2192406544452885</string>
    <string name="fb_login_protocol_scheme">fb2192406544452885</string>
    <string name="facebook_client_token">a04da28fea29bf150a96ff511b9f1ada</string>
    <string name="default_web_client_id">510318427005-n7jbvmjquk40o3pqc44uku0sobs264n2.apps.googleusercontent.com</string>

</resources>