<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/test3"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="20dp">

        <Button
            android:id="@+id/btnVolverRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/buttonLogHard"
            android:fontFamily="monospace"
            android:text="Volver"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="1dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/logo_game_black" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="250dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:gravity="center_vertical"
                    android:text="GAME-ARENA"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textColorLink="@color/white"
                    android:textSize="34sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="70dp"
                android:fontFamily="monospace"
                android:text="@string/log_detel"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="REGISTRO"
                    android:textStyle="bold" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textField1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/label_card9"
                    android:textColorHint="@color/white"
                    app:hintTextColor="#AFAFAF">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtRegistroTorneo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/loginBlack"
                        android:fontFamily="monospace"
                        android:inputType="text"
                        android:textColor="#FFFFFF"
                        android:textColorLink="#FFFFFF"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textField"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/label_card10"
                    android:textColorHint="@color/white"
                    app:hintTextColor="#AFAFAF">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtRegistroJugador"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/loginBlack"
                        android:fontFamily="monospace"
                        android:inputType="text"
                        android:textColor="#FFFFFF"
                        android:textColorLink="#FFFFFF"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textField2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/label_card11"
                    android:textColorHint="@color/white"
                    app:hintTextColor="#AFAFAF">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtRegistroJuego"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/loginBlack"
                        android:fontFamily="monospace"
                        android:inputType="text"
                        android:textColor="#FFFFFF"
                        android:textColorLink="#FFFFFF"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textField4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/label_card12"
                    android:textColorHint="@color/white"
                    app:hintTextColor="#AFAFAF">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtEstado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/loginBlack"
                        android:fontFamily="monospace"
                        android:inputType="text"
                        android:textColor="#FFFFFF"
                        android:textColorLink="#FFFFFF"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnGuardarRegistro"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/buttonLogHard"
                        android:fontFamily="monospace"
                        android:text="Guardar"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/btnCancelarRegistro"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/buttonLogHard"
                        android:fontFamily="monospace"
                        android:text="Cancelar"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
