<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:background="@drawable/test3"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="1dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/logo_game_black" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="250dp"
                    android:layout_height="80dp"
                    android:fontFamily="monospace"
                    android:gravity="center_vertical"
                    android:text="GAME-ARENA"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textColorLink="@color/white"
                    android:textSize="34sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="70dp"
                android:fontFamily="monospace"
                android:text="@string/log_det"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:text="Registro"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textField1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/label_login_usu"
                        android:textColorHint="@color/white"
                        app:hintTextColor="#AFAFAF">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtLoginReg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/loginBlack"
                            android:fontFamily="monospace"
                            android:inputType="text"
                            android:textColor="#FFFFFF"
                            android:textColorLink="#FFFFFF"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textField4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/label_reg_email"
                        android:textColorHint="@color/white"
                        app:hintTextColor="#AFAFAF">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtCorreoReg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/loginBlack"
                            android:fontFamily="monospace"
                            android:inputType="text"
                            android:textColor="#FFFFFF"
                            android:textColorLink="#FFFFFF"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textField2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/label_login_cla"
                        android:textColorHint="@color/white"
                        app:endIconMode="password_toggle"
                        app:hintTextColor="#B8B8B8">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtClaveReg"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/loginBlack"
                            android:fontFamily="monospace"
                            android:inputType="textPassword"
                            android:textColor="#FFFFFF"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textField3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/label_reg_cla2"
                        android:textColorHint="@color/white"
                        app:endIconMode="password_toggle"
                        app:hintTextColor="#B8B8B8">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtClaveReg2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/loginBlack"
                            android:fontFamily="monospace"
                            android:inputType="textPassword"
                            android:textColor="#FFFFFF"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="220dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:gravity="bottom|center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnRegistroReg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="@color/buttonLogHard"
                        android:fontFamily="monospace"
                        android:text="Crear"
                        android:textColor="@color/white" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/btnVolverReg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="@color/buttonLogSoft"
                        android:fontFamily="monospace"
                        android:text="Cancelar"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
